--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 target="_blank" class="Insta-button">
                 <img src="imagenes/instagram.png" alt="Instagram">
             </a>
-            <a href="https://api.whatsapp.com/send?phone=5612835169"
+            <a href="https://www.tiktok.com/@mvs.influencer?_t=8dKVmsB8vGI&_r=1"
                 target="_blank" class="Tick-button">
                 <img src="imagenes/tik-tok.png" alt="tiktok">
             </a>
             <a
-                href="https://instagram.com/mvs.influencer?igshid=MzRlODBiNWFlZA=="
+                href="https://www.facebook.com/academiadeinfluencers?mibextid=ZbWKwL"
                 target="_blank" class="Face-button">
                 <img src="imagenes/facebook.png" alt="Facebook">
             </a>
