--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                 target="_blank" class="Face-button">
                 <img src="imagenes/facebook.png" alt="Facebook">
             </a>
+            <div class="div-1">
+
+            </div>
+            <div class="div-2">
+                
+            </div>
 
             <footer>
                 <div class="footer-container">
