--- a/index.html
+++ b/index.html
@@ -65,19 +65,60 @@
             </div>
             <div class="layer layer-4">
                 <div class="row">
-                    <div class="col-12">
-                        <iframe width="100%" height="800px"
+                    <div class="col-2"></div>
+                    <div class="col-8">
+                        <iframe width="100%" height="500px"
                             src="https://www.youtube.com/embed/4mZI91L6_90"
                             title="ACADEMIA DE INFLUENCERS | MVS | ¡INSCRÍBETE!"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
                     </div>
+                    <div class="col-2"></div>
 
                 </div>
             </div>
-            <div class="layer layer-green">
-                <h1>pantalla5</h1>
+            <div class="layer layer-5">
+                <div class="row" id="talent-1" style="margin: 10%;">
+                    <div class="col-md-4" style="padding:0; margin: 0;">
+                        <div class="gallery-item">
+                            <img src="imagenes/maestro0.png" alt="Imagen 1"
+                                style="width: 100%;"
+                                class="img-fluid ">
+                            <div class="overlay">
+                                <h4>Antonio Betancurt</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4"
+                        style="padding:0; margin: 0;">
+                        <div class="gallery-item">
+                            <img src="imagenes/maestro1.png" alt="Imagen 2"
+                                style="width: 100%;"
+                                class="img-fluid">
+                            <div class="overlay">
+                                <h4>Tio FX</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4"
+                        style="padding:0; margin: 0;">
+                        <div class="gallery-item">
+                            <img src="imagenes/maestro2.png" alt="Imagen 3"
+                                style="width: 100%;"
+                                class="img-fluid">
+                            <div class="overlay">
+                                <h4>Jose Andrés</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="layer layer-6">
+
+            </div>
+            <div class="layer layer-7">
+                <img src="imagenes/Vector 8.png" style="width: 100%; height: 80%; margin: 0; padding: 0;">
             </div>
         </div>
         <script src="script.js"></script>
