--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 con otros amantes de los animales,
                                 compartir historias y crear recuerdos
                                 inolvidables.</span>
-                            <button style="margin: 10%; text-align: center; border-radius: 20px; background-color: white; color: rgb(22, 19, 19);">!Quiero saber mássss!</button>    
+                            <button style="margin: 10%; text-align: center; border-radius: 20px; background-color: white; color: rgb(22, 19, 19);">!Quiero saber más!</button>    
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
