--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 con otros amantes de los animales,
                                 compartir historias y crear recuerdos
                                 inolvidables.</span>
-                            <button style="margin: 10%; text-align: center; border-radius: 20px; background-color: white; color: rgb(22, 19, 19);">!Quiero saber más!</button>    
+                            <button style="margin: 10%; text-align: center; border-radius: 20px; background-color: white; color: rgb(22, 19, 19);">!Quiero saber másssss!</button>    
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -121,6 +121,12 @@
                 <img src="imagenes/Vector 8.png" style="width: 100%; height: 80%; margin: 0; padding: 0;">
             </div>
         </div>
+        <!-- <button id="next-layer-button" class="next-layer-button">
+            <i class="fas fa-chevron-down"></i>
+          </button> -->
+          <button id="scrollButton" class="scroll-button">
+            <i class="fas fa-chevron-down"></i>
+          </button>
         <script src="script.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script
