--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto p-4">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link">Service</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu</a>
+                    <a href="abou.html" class="nav-item nav-link">About</a>
+                    <a href="servic.html" class="nav-item nav-link">Service</a>
+                    <a href="men.html" class="nav-item nav-link">Menu</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu text-capitalize">
-                            <a href="reservation.html" class="dropdown-item">Reservation</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                            <a href="reservatio.html" class="dropdown-item">Reservation</a>
+                            <a href="testimonia.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="contac.html" class="nav-item nav-link">Contact</a>
                 </div>
             </div>
         </nav>
@@ -174,6 +174,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Offer Start -->
     <div class="offer container-fluid my-5 py-5 text-center position-relative overlay-top overlay-bottom">
         <div class="container py-5">
